--- a/potok/index.html
+++ b/potok/index.html
@@ -7,7 +7,7 @@
   <meta content="Альфа-Поток | Деньги на развитие бизнеса" property="og:title">
   <meta content="Получить интернет-кредит для бизнеса. До 5 000 000 р. за 15 минут. Без залога и поручителей. Полностью онлайн." property="og:description">
   <meta content="summary" name="twitter:card">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="width=device-width, initial-scale=1, height=device-height" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/new-potok-template.webflow.css" rel="stylesheet" type="text/css">
