--- a/test-btn/index.html
+++ b/test-btn/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8" />
-    <title>Привет, мир!</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://m-ng.24vulkanstage.com/styles.3621b0ac54c777fdf74b.css">
-
-    <style>
-     
-    </style>
-  </head>
-
-  <body>
+    <title>Document</title>
+</head>
+<body>
+    <div class="container"> 
     <h1>Test btn</h1>
 
     <div class="exchange__btn">
@@ -18,6 +16,6 @@
             Обменять 
         </button>
     </div>
-
-  </body>
+</div> 
+</body>
 </html>
