--- a/test-btn/index.html
+++ b/test-btn/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://m-ng.24vulkanstage.com/styles.3621b0ac54c777fdf74b.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container"> 
-    <h1>Test btn</h1>
+    <h1>Test btn !</h1>
 
     <div class="exchange__btn">
         <button type="submit" class="btn btn--green btn--longer disabled" disabled="">
